Source/WebCore: Allow strings as argument to :lang() https://bugs.webkit.org/show_bug.cgi?id=139678

Patch by Dhi Aurrahman <diorahman@rockybars.com> on 2014-12-25
Reviewed by Benjamin Poulain.

Allow strings as argument to :lang()[1]. The selector with empty string argument (e.g. :lang(""))
is handled as never matching.

[1] http://www.w3.org/blog/CSS/2014/12/11/minutes-telecon-231/

Test: fast/css/css-lang-selector-with-string-arguments-text.html
      fast/selectors/lang-extended-filtering-with-string-arguments.html

* css/CSSGrammar.y.in:
* css/SelectorCheckerTestFunctions.h:
(WebCore::matchesLangPseudoClass):

LayoutTests:
Extend :lang() with string arguments
https://bugs.webkit.org/show_bug.cgi?id=139678

Patch by Dhi Aurrahman <diorahman@rockybars.com> on 2014-12-25
Reviewed by Benjamin Poulain.

* fast/css/css-lang-selector-with-string-arguments-text-expected.txt: Added.
* fast/css/css-lang-selector-with-string-arguments-text.html: Added.
* fast/selectors/lang-extended-filtering-with-string-arguments-expected.txt: Added.
* fast/selectors/lang-extended-filtering-with-string-arguments.html: Added.

Canonical link: https://commits.webkit.org/157903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177745 268f45cc-cd09-0410-ab3c-d52691b4dbfc